--- a/DSOA/dsoa-slaManager/.project
+++ b/DSOA/dsoa-slaManager/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>SLAmanager</name>
+	<name>dsoa-SLAmanager</name>
 	<comment></comment>
 	<projects>
 	</projects>
