non relatve path

--- a/DSOA/dsoa-dgcenter/.classpath
+++ b/DSOA/dsoa-dgcenter/.classpath
@@ -4,6 +4,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/dsoa-agent"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/osgi"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/cxf"/>
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.USER_LIBRARY/cxf"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
